<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.createad.CreateAdFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Spinner
            android:id="@+id/spinner_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_restaurant_name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/spinner_location"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_enter_hall_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_hall_area"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/et_enter_name"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_enter_maximum_capacity_of_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_max_capacity_of_people"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/et_enter_hall_area"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_enter_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_address_restaurant"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/et_enter_maximum_capacity_of_people"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_enter_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/et_enter_address"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_enter_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_mail_address"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/et_enter_phone_number"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_enter_web_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_web_site"
            android:inputType="textWebEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/et_enter_mail"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_enter_average_check_per_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_average_check_per_person"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/et_enter_web_site"
            tools:ignore="Autofill" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/select_photos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_enter_average_check_per_person" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/btn_select_photos" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>